# photo-realistic

acceleration-structures/: Cargo.toml
acceleration-structures/src/: aabb.rs  intersect.rs  kd_tree.rs  lib.rs  main.rs  primitive.rs  ray.rs  triangle.rs
obj-rs/: Cargo.toml
obj-rs/src/: error.rs  export.rs  lib.rs
ray-tracer-baby/: .gitignore  Makefile  build.bat  env.bat  main.c  run.bat
ray-tracer-baby/include/: attributes.h  config.h  geometry.h  obj.h  progress_bar.h  ray_tracing.h  renderer.h  shaders.h  vec3_utilities.h
ray-tracer-baby/shaders/: shader.fs  shader.vs
ray-tracer-baby/src/: ray_tracing.c  renderer.c  vec3_utilities.c
