[package]
name = "obj-rs"
version = "0.7.1"
authors = ["Hyeon Kim <simnalamburt@gmail.com>"]
edition = "2021"

description = """
Wavefront obj parser for Rust. It handles both 'obj' and 'mtl' formats.
"""

documentation = "https://docs.rs/obj-rs/"
readme = "README.md"
homepage = "https://github.com/simnalamburt/obj-rs"
repository = "https://github.com/simnalamburt/obj-rs"
license = "Apache-2.0 OR MIT"
keywords = ["graphics", "obj", "WaveFront", "3D", "parser"]
categories = ["parsing", "rendering::data-formats"]

[lib]
name = "obj"
crate-type = ["staticlib"]

[dependencies]
num-traits = "0.2.11"
